adds dev documentation to README.